--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,16 @@
 /build/
 /phpunit.xml
 /var/*
-!/var/cache
+/var/cache
 /var/cache/*
-!var/cache/.gitkeep
-!/var/logs
+/var/cache/.gitkeep
+/var/logs
 /var/logs/*
-!var/logs/.gitkeep
-!/var/sessions
+/var/logs/.gitkeep
+/var/sessions
 /var/sessions/*
-!var/sessions/.gitkeep
-!var/SymfonyRequirements.php
+/var/sessions/.gitkeep
+/var/SymfonyRequirements.php
 /vendor/
 /web/bundles/
 /.idea/*
