--- a/src/Disneyland/disneyBundle/Resources/config/routing.yml
+++ b/src/Disneyland/disneyBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-disneylanddisney_homepage:
+home:
     path:     /
-    defaults: { _controller: DisneylanddisneyBundle:Default:index }
+    defaults: { _controller: DisneylanddisneyBundle:Home:index }
