--- a/src/Disneyland/disneyBundle/Resources/config/routing.yml
+++ b/src/Disneyland/disneyBundle/Resources/config/routing.yml
@@ -1,3 +1,15 @@
 home:
     path:     /
     defaults: { _controller: DisneylanddisneyBundle:Home:index }
+
+attraction:
+    path:     /
+    defaults: { _controller: DisneylanddisneyBundle:Home:index }
+
+restaurant:
+    path:     /
+    defaults: { _controller: DisneylanddisneyBundle:Home:index }
+
+shows:
+    path:     /
+    defaults: { _controller: DisneylanddisneyBundle:Home:index }
