--- a/src/Disney/DisneylandBundle/Resources/config/services.yml
+++ b/src/Disney/DisneylandBundle/Resources/config/services.yml
@@ -2,6 +2,6 @@ services:
 #    disney_disneyland.example:
 #        class: Disney\DisneylandBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
-    disney_disneykand.jsontobdd:
+    disney_disneyland.jsontobdd:
         class: Disney\DisneylandBundle\Service\JsonToBDD
         arguments: ["@doctrine.orm.entity_manager"]
