--- a/src/Disney/DisneylandBundle/Resources/config/routing.yml
+++ b/src/Disney/DisneylandBundle/Resources/config/routing.yml
@@ -3,8 +3,12 @@ home:
     defaults: { _controller: DisneyDisneylandBundle:Home:index }
 
 attractions:
-    path:     /attractions
-    defaults: { _controller: DisneyDisneylandBundle:Home:index }
+    path:     /attractions/{id}
+    defaults: { _controller: DisneyDisneylandBundle:Parc:attractions }
+
+attraction:
+    path: /attraction/{id}
+    defaults: { _controller: DisneyDisneylandBundle:Parc:attractions }
 
 hotels:
     path:     /hotels
